--- a/package.json
+++ b/package.json
@@ -9,10 +9,26 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-picker/picker": "2.4.10",
+    "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/stack": "^6.3.20",
     "expo": "~49.0.15",
+    "expo-blur": "~12.4.1",
+    "expo-font": "~11.4.0",
+    "expo-linear-gradient": "~12.3.0",
+    "expo-localization": "~14.3.0",
+    "expo-splash-screen": "~0.20.5",
+    "expo-sqlite": "~11.3.3",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
-    "react-native": "0.72.6"
+    "react-native": "0.72.6",
+    "react-native-dropdown-picker": "^5.4.6",
+    "react-native-modal-dropdown": "^1.0.2",
+    "react-native-paper": "^5.11.4",
+    "react-native-safe-area-context": "^4.8.2",
+    "react-native-svg": "13.9.0",
+    "react-native-svg-transformer": "^1.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
